--- a/PostNLWerktijden&Salaris/app/src/main/res/layout-land/activity_add_walk.xml
+++ b/PostNLWerktijden&Salaris/app/src/main/res/layout-land/activity_add_walk.xml
@@ -12,7 +12,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/addWalk"
+        android:id="@+id/addWalkTitle"
         android:textSize="22sp"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
