--- a/PostNLWerktijden&Salaris/app/src/main/res/layout/activity_months.xml
+++ b/PostNLWerktijden&Salaris/app/src/main/res/layout/activity_months.xml
@@ -12,7 +12,7 @@
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/postnllogo"
+        android:src="@drawable/mailorange"
         android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"/>
 
